--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Gentium+Book+Basic:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 /* global */
 :root {
-  --ff-alfa: "Alfa Slab One", sans-serif;
+  --ff-alfa: "Montserrat", sans-serif;
   --ff-gentium: "Open Sans", sans-serif;
 
   --fw-100: 100;
@@ -15,7 +13,7 @@
   --fw-700: 700;
   --fw-900: 900;
 
-  --fw-button: 400;
+  --fw-button: 600;
 
   --fs-1: 2rem;
   --fs-2: 1.375rem;
@@ -26,18 +24,19 @@
   --fs-title: clamp(1rem, (1rem + 5vw), 3.5rem);
   --fs-heading: clamp(1rem, (1rem + 2vw), 2.8rem);
 
-  --txt-dark: #232525;
+  --txt-dark: #1a1a1a;
   --txt-light: #fff;
   --txt-dark-secondary: #393d3d;
   --txt-light-secondary: #f0f0f0;
+  --txt-body: #333333;
 
-  --clr-dark: #232525;
+  --clr-dark: ##1a1a1a;
   --clr-light: #fff;
   --clr-light-secondary: #f0f0f0;
-  --clr-accent: #2a7c1a;
-  --clr-accent-lighter: #41b12b;
-  --clr-accent-darker: #209c07;
-  --clr-tan: #e9be83;
+  --clr-accent: #3fd9ff;
+  --clr-accent-lighter: #59dcfd;
+  --clr-accent-darker: #2acff8;
+  --clr-tan: #5845b1;
   --clr-overlay: rgba(0, 0, 0, 0.6);
   --clr-overlay-darker: rgba(0, 0, 0, 0.8);
 
@@ -128,7 +127,7 @@ hr {
 .title {
   font-family: var(--ff-alfa);
   font-size: var(--fs-1);
-  font-weight: var(--fw-400);
+  font-weight: var(--fw-600);
   text-transform: uppercase;
   line-height: 1;
 }
@@ -136,7 +135,7 @@ hr {
 .subheader {
   font-family: var(--ff-alfa);
   font-size: var(--fs-2);
-  font-weight: var(--fw-400);
+  font-weight: var(--fw-600);
   text-transform: capitalize;
   line-height: 1.1;
 }
